<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".compare">

    <TextView
        android:id="@+id/textlok"
        android:layout_width="87dp"
        android:layout_height="24dp"
        android:layout_marginStart="146dp"
        android:layout_marginTop="44dp"
        android:gravity="center"
        android:text="@string/resuit"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttongal"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:background="@color/grayyt"
        android:textSize="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:text="<"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonsvit"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="40dp"
        android:background="@color/grayyt"
        android:gravity="center|top"
        android:text=".."
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imagephoto"
        android:layout_width="315dp"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textlok"
        app:srcCompat="@drawable/switc" />

    <TextView
        android:id="@+id/textcrv"
        android:layout_width="162dp"
        android:layout_height="24dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/crv"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagephoto" />

    <TextView
        android:id="@+id/textgood"
        android:layout_width="51dp"
        android:layout_height="15dp"
        android:layout_marginStart="294dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/good"
        android:textColor="@color/green"
        android:textSize="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagephoto" />

    <ImageView
        android:id="@+id/imageprog"
        android:layout_width="315dp"
        android:layout_height="20dp"
        android:layout_marginTop="19dp"
        android:layout_marginStart="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textcrv"
        app:srcCompat="@drawable/progres" />

    <TextView
        android:id="@+id/textmaq"
        android:layout_width="37dp"
        android:layout_height="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/maq"
        android:textColor="@color/grayy"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageprog" />

    <TextView
        android:id="@+id/textjun"
        android:layout_width="48dp"
        android:layout_height="20dp"
        android:layout_marginStart="304dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/jun"
        android:textColor="@color/grayy"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageprog" />

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="427dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textmaq">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textgjck"
                android:layout_width="139dp"
                android:layout_height="17dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/gthtl"
                android:textColor="@color/grayy"
                android:textSize="14dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imagegthtl"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="19dp"
                android:layout_marginStart="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textcrv"
                app:srcCompat="@drawable/gthtl" />

            <ImageView
                android:id="@+id/imagegtht"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="19dp"
                android:layout_marginStart="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textcrv"
                app:srcCompat="@drawable/gtht" />

        </LinearLayout>

            <TextView
                android:id="@+id/textobr"
                android:layout_width="149dp"
                android:layout_height="17dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/obr"
                android:textColor="@color/grayy"
                android:textSize="14dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/imagecgb"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="19dp"
                    android:layout_marginStart="30dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textcrv"
                    app:srcCompat="@drawable/cgb" />

                <ImageView
                    android:id="@+id/imagecgbyf"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="19dp"
                    android:layout_marginStart="30dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textcrv"
                    app:srcCompat="@drawable/cgbyf" />

            </LinearLayout>

            <TextView
                android:id="@+id/textleft"
                android:layout_width="149dp"
                android:layout_height="17dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/left"
                android:textColor="@color/grayy"
                android:textSize="14dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/imagenhtyz"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="19dp"
                    android:layout_marginStart="30dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textcrv"
                    app:srcCompat="@drawable/nhtyz" />

                <ImageView
                    android:id="@+id/imagenht"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="19dp"
                    android:layout_marginStart="30dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textcrv"
                    app:srcCompat="@drawable/nht" />

            </LinearLayout>

            <TextView
                android:id="@+id/textright"
                android:layout_width="149dp"
                android:layout_height="17dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/right"
                android:textColor="@color/grayy"
                android:textSize="14dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/imagehfcnz"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="19dp"
                    android:layout_marginStart="30dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textcrv"
                    app:srcCompat="@drawable/hfcnz" />

                <ImageView
                    android:id="@+id/imagehfcn"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="19dp"
                    android:layout_marginStart="30dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textcrv"
                    app:srcCompat="@drawable/hfcn" />

            </LinearLayout>

            <Button
                android:id="@+id/button"
                android:layout_width="315dp"
                android:layout_height="60dp"
                android:background="@drawable/gradient"
                android:text="Назад"
                android:layout_marginStart="31dp"
                android:textColor="@color/white"
                android:textSize="16dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="30dp"
                app:layout_constraintStart_toStartOf="parent" />



        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>